# CRISP

./: .gitignore
model/my_first_take/auto_generated/: my_first_take_example1_objective_cppad_cg_model.dylib
src/: CMakeLists.txt
src/core/src/cppad_core/: CppAdInterface.cpp
src/examples/: CMakeLists.txt
src/examples/my_take/cpp/: example1.cpp
src/tutorials/: cppad_standard_vs_CRISP.md  example.md
src/tutorials/optimization_nuances/: on_dual_variable_for_feasibility.md  on_tangent_space_with_feasibility.md
